# cockroach-farm

./: .gitignore  README.md
.github/workflows/: android.yaml  bazel.yaml  behave.yaml  cargo-nextest.yaml  check.yaml  cypress.yaml  dart.yaml  factory.yaml  gotest.yaml  gradle.yaml  maven.yaml  playwright.yaml  pytest.yaml  vitest copy.yaml  vitest.yaml  xcresult.yaml
.trunk/: trunk.yaml
android/app/: build.gradle
bazel/: .gitignore  MODULE.bazel
bazel/src/main/: BUILD  hello_test.go
behave/: requirements.txt
behave/features/: calculator.feature  environment.py
cargo-nextest/: .gitignore  Cargo.toml
cargo-nextest/src/: main.rs
cypress/: cypress.config.js  package-lock.json  package.json
dart/: pubspec.yaml
dart/test/: cli_test.dart
googletest/: CMakeLists.txt
googletest/src/: hello.cpp  hello.h
gotestsum/: counter_test.txt  hello.go
gradle/: settings.gradle
jasmine/: package-lock.json  package.json
jest/: jest.config.json  package-lock.json  package.json
karma/: karma.conf.js  package-lock.json  package.json
maven/: pom.xml
minitest/: Gemfile
mocha/: package-lock.json  package.json
nightwatch/: README.md  bun.lockb  index.ts  nightwatch.conf.cjs  package-lock.json  package.json
pest/: composer.json
phpunit/: composer.json
playwright/: junit.xml  package.json  playwright.config.ts  pnpm-lock.yaml
pytest/: test_app.py
rspec/: .rspec_status  Gemfile
swift-calculator/: Package.swift
vitest/: README.md  bun.lockb  junit.xml  package-lock.json  package.json  sum.test.js  vitest.config.ts
xcode/: test-results
(+109 files in other folders)
